import TimeSelector from "@/components/TimeSelector";
import AnimatedRoot from "@/components/UI/AnimatedRoot";
import Button from "@/components/UI/Button";
import GoBackButton from "@/components/UI/GoBackButton";
import InputField from "@/components/UI/Input";
import { Sizes } from "@/constants/Sizes";
import { rootStyles, textDefault } from "@/constants/Styles";
import { useAddGroup } from "@/hooks/useAddGroup";
import { useAvocadoro } from "@/store/AvocadoroContext";
import MaterialIcons from "@expo/vector-icons/MaterialIcons";
import { useLocalSearchParams, useRouter } from "expo-router";
import { useEffect, useState } from "react";
import {
    Keyboard,
    StyleSheet,
    Text,
    TouchableWithoutFeedback,
    View,
} from "react-native";

export default function AddGroup() {
    // Read values from the route
    const { groupId, groupName, groupFocusTimer, groupBreakTimer, anonymous } =
        useLocalSearchParams();

    const { message } = useAvocadoro();

    const [buttonWidth, setButtonWidth] = useState<number>(0);

    const [focusTimer, setFocusTimer] = useState<number>(25);
    const [breakTimer, setBreakTimer] = useState<number>(5);

    const [loading, setLoading] = useState<boolean>(false);
    const [editMode, setEditMode] = useState<boolean>(false);
    const [anonymousMode, setAnonymousMode] = useState<boolean>(false);
    const [deleteView, setDeleteView] = useState<boolean>(false);
    const [id, setId] = useState<string>("");

    const [name, setName] = useState<string>("");

    const router = useRouter();

    // Set initial states
    useEffect(() => {
        if (!groupId) return;

        if (groupId) {
            setLoading(true);
            setId(groupId as string);
            setName(groupName as string);
            setFocusTimer(Number(groupFocusTimer as string));
            setBreakTimer(Number(groupBreakTimer as string));
            setEditMode(true);
        }
    }, [groupId]);

    // Check if anonymouse mode
    useEffect(() => {
        if (anonymous === "true") {
            setAnonymousMode(true);
        }
    }, [anonymous]);

    // Make sure that UI catches up with the state update
    useEffect(() => {
        if (
            focusTimer === Number(groupFocusTimer as string) &&
            breakTimer === Number(groupBreakTimer as string)
        ) {
            setLoading(false);
        }
    }, [focusTimer, breakTimer]);

    // useAddGroup hook
    const { saveGroupHandler, deleteGroupHandler, createAnonymousGroup } =
        useAddGroup({ id, name, focusTimer, breakTimer, editMode, router });

    if (loading) {
        return;
    }

    return (
        <>
            <AnimatedRoot />
            <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
                <View style={styles.root}>
                    <View style={styles.topView}>
                        <View
                            onLayout={(event) => {
                                const { width } = event.nativeEvent.layout;
                                setButtonWidth(width);
                            }}
                        >
                            <GoBackButton
                                onPress={() => {
                                    {
                                        deleteView
                                            ? setDeleteView(false)
                                            : router.back();
                                    }
                                }}
                            />
                        </View>
                        {!anonymousMode && (
                            <>
                                <View style={styles.titleView}>
                                    <Text style={styles.titleText}>
                                        {editMode ? groupName : "Add Group"}
                                    </Text>
                                </View>
                                <View style={{ width: buttonWidth }}>
                                    {editMode && !deleteView && (
                                        <Button
                                            title={
                                                <MaterialIcons
                                                    name="delete-outline"
                                                    size={Sizes.buttonIcon}
                                                />
                                            }
                                            onPress={() => {
                                                setDeleteView(true);
                                            }}
                                            icon={true}
                                            accessibilityLabel="delete-button"
                                        />
                                    )}
                                </View>
                            </>
                        )}
                    </View>
                    <View style={styles.middleView}>
                        {deleteView ? (
                            <View style={styles.deleteView}>
                                <Text style={styles.deleteText}>
                                    Are you sure ?
                                </Text>
                                <Button
                                    title="Delete"
                                    onPress={() => deleteGroupHandler()}
                                    accessibilityLabel="delete-button-confirm"
                                    deleteButton={true}
                                />
                            </View>
                        ) : (
                            <>
                                {!anonymousMode && (
                                    <View style={styles.nameView}>
                                        <InputField
                                            placeholder="Avocadoro name"
                                            value={name}
                                            onChangeText={(val) => {
                                                setName(val);
                                            }}
                                            inputMode="text"
                                            accessibilityLabel="name-field"
                                        />
                                    </View>
                                )}
                                <View style={styles.timeView}>
                                    <Text style={styles.timeText}>
                                        Focus time in minutes
                                    </Text>
                                    <TimeSelector
                                        min={5}
                                        max={60}
                                        step={5}
                                        defaultValue={focusTimer}
                                        onClick={(time) => setFocusTimer(time)}
                                    />
                                </View>
                                <View style={styles.timeView}>
                                    <Text style={styles.timeText}>
                                        Break time in minutes
                                    </Text>
                                    <TimeSelector
                                        min={5}
                                        max={60}
                                        step={5}
                                        defaultValue={breakTimer}
                                        onClick={(time) => setBreakTimer(time)}
                                    />
                                </View>
                                <View style={styles.buttonView}>
                                    {editMode && (
                                        <Button
                                            title="Update"
                                            onPress={() => {
                                                saveGroupHandler();
                                            }}
                                            accessibilityLabel="update-button"
                                        />
                                    )}
                                    {anonymousMode && (
                                        <Button
                                            title="Create"
                                            onPress={() => {
                                                createAnonymousGroup();
                                            }}
                                            accessibilityLabel="anonymous-button"
                                        />
                                    )}
                                    {!anonymousMode && !editMode && (
                                        <Button
                                            title="Add"
                                            onPress={() => {
                                                saveGroupHandler();
                                            }}
                                            accessibilityLabel="add-button"
                                        />
                                    )}
                                    <Text style={styles.messageText}>
                                        {message}
                                    </Text>
                                </View>
                            </>
                        )}
                    </View>
                </View>
            </TouchableWithoutFeedback>
        </>
    );
}

const styles = StyleSheet.create({
    root: rootStyles,
    topView: {
        flexDirection: "row",
        justifyContent: "space-between",
        height: Sizes.topBottomHeight,
        width: "100%",
    },
    titleView: {
        justifyContent: "center",
        alignItems: "center",
        width: "50%",
    },
    titleText: {
        ...textDefault,
        textAlign: "center",
        fontSize: Sizes.titleSize,
    },
    middleView: {
        flex: 1,
        justifyContent: "flex-start",
    },
    nameView: {
        justifyContent: "center",
        alignItems: "center",
    },
    timeView: {
        justifyContent: "center",
        alignItems: "center",
        marginTop: Sizes.agTimeViewMarginTop,
    },
    timeText: {
        ...textDefault,
        fontSize: Sizes.agTimeText,
    },
    buttonView: {
        alignItems: "center",
    },
    messageText: {
        ...textDefault,
        fontSize: Sizes.messageText,
        textAlign: "center",
        marginHorizontal: Sizes.messageMargin / 2,
        color: "red",
    },
    deleteView: {
        flex: 1,
        justifyContent: "center",
    },
    deleteText: {
        ...textDefault,
        fontSize: Sizes.agDeleteText,
    },
});
