...
                                                    groupBreakTimer: breakTimer,
                                                },
                                            });
                                        }
                                    }}
                                    icon={true}
                                    accessibilityLabel="edit-button"
                                />
                            </View>
                        </>
                    )}
                </View>
                <View style={styles.middleView}>
...
                                        />
                                    }
                                    iconNoSpace={true}
                                    onPress={() => {
                                        openTimerCloseAvocadoro();
                                    }}
                                    accessibilityLabel="down-button"
                                />
                            </View>
                        )}
                        <View style={styles.insideMiddleView}>
                            <View style={styles.totalTimeView}>
                                <Text style={styles.totalTimeLabel}>
...
