...
        setCurrentQuote(quotes[randomIndex]);
    }

    if (currentQuote) {
        return (
            <View style={styles.root}>
                <Text style={styles.quoteText} accessibilityLabel="quote-quote">
                    {currentQuote.quote}
                </Text>
                <Text
                    style={styles.quoteAuthor}
                    accessibilityLabel="quote-author"
                >
                    {currentQuote.author}
                </Text>
            </View>
        );
    } else {
...
